--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@
 .externalNativeBuild
 .cxx
 local.properties
+gradle.properties
+*.apk
+*.ap_
+*.dex
+.navigation/
+captures/
+output.json
+.idea
